# HookGenrationPipeline

./: .env.example  .gitignore  README.md  docs.md  main.py  prepare.py  pyproject.toml  test_deepgram_config.py  test_deepgram_timeout.py  test_overlap.py  test_timeout_handling.py  ui.py
.serena/: project.yml
MoreFeatures/: B_Roll_Integration.py  EmotionAnalysis.py  Sound_Effect_Engine.py
MoreFeatures/LLM/: __init__.py  prompts.py  simpleLlm.py
pipeline/: AudioAnalysis.py  Blueprint.py  CropProcessing.py  EditingEffects.py  GetTranscript.py  LoggerSetup.py  TranscriptParser.py  VideoIO.py  VisionAnalysis.py  __init__.py  config.py  utils.py
